ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.8.0-rc3
    • Affects Version/s: 2.8.0-rc2
    • Component/s: Index Maintenance
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      One way to reproduce:
      Start server with setting "failIndexKeyTooLong" set to false and try to sync from a 2.6 primary which has too long keys indexed, 2.8 secondary fails with:

      2014-12-09T05:56:39.090+0000 I INDEX    [rsSync] Btree::insert: key too large to index, failing db.coll.etc { : "                                                                                                                                                      ..." }
      2014-12-09T05:56:39.090+0000 D -        [rsSync] User Assertion: 17280:Btree::insert: key too large to index, failing db.coll"                                                                                                                                                      ..." }
      2014-12-09T05:56:39.136+0000 D STORAGE  [rsSync] db.coll.etc: clearing plan cache - collection info cache reset
      2014-12-09T05:56:39.209+0000 D STORAGE  [rsSync] db.coll.etc: clearing plan cache - collection info cache reset
      2014-12-09T05:56:39.295+0000 E REPL     [rsSync] 17280 Btree::insert: key too large to index, failing db.collection etc. "                                                                                                                                                      ..." }
      2014-12-09T05:56:39.295+0000 E REPL     [rsSync] initial sync attempt failed, 9 attempts remaining
      

            Assignee:
            Geert Bosch
            Reporter:
            Asya Kamsky
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: