SERVER-16497: Allow suppressing KeyTooLong errors in foreground index build